Stop measuring the execution time of the hashMap creation.